# nlp_project

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/stemming/: api.py  cli.py  db_filler.py
backend/stemming/core/: coreferences.py  evaluation.py  graph.py  io_utils.py  models.py  preprocessing.py  simple_graph_builder.py  tripplets.py  vectorization.py
backend/stemming/fizhim_data/: Lemma.csv  Original.csv  Stopwords.csv  Triplets.csv  clean_db.sql  fill_db.py
frontend/src/lib/components/: PipelineViz.svelte
frontend/src/routes/word/[id]/: +page.svelte
